  needed in LocalSettings.php:
    $smwgDefaultStore = 'SMWSparqlStore';
    $smwgSparqlDatabase = 'SMWSparqlDatabase';
    // The following should be set to the URLs to reach the store:
    $smwgSparqlQueryEndpoint = 'http://localhost:8080/sparql/';
    $smwgSparqlUpdateEndpoint = 'http://localhost:8080/update/';
    $smwgSparqlDataEndpoint = 'http://localhost:8080/data/'; // can be empty
* The Type namespace has been abolished. Builtin types now are displayed by the
  special page Special:Types, and there are no "custom types" any longer.
  By default, the Type namespace is gone and existing pages in this namespace
  can no longer be accessed. This can be changed by setting
  $smwgHistoricTypeNamespace = true in LocalSettings.php before including SMW.
* Changed the way in which units of measurement work. Type:Number now does not
  accept any units, and a new type "Quantity" is used for numbers with units.
  Units must be declared on the property page (not on the Type page as before),
  and only units that have a declared conversion factor are accepted.
* The declaration of Type:Record properties has changed. Instead of a list of
  datatypes, the declaration now requires a list of properties that are to be
  used for the fields of the record. The declaration is still done with the
  property "has fields" as before.
* Changed the way parameters in query printers are specified and handled
  using the Validator extension. This includes improvements to the parameter
  options in the Special:Ask GUI and better error reporting for ask queries. 
* Added UNIX-style DSV (Delimiter-separated values) result format.
* Reworked internal data model, cleaning up and re-implementing SMWDataValue and
  all of its subclasses, and introducing new data item classes to handle data.
  The class SMWCompatibilityHelpers provides temporal help for extensions that
  still depend on the old format and APIs.
* Fixed PostGres SQL issues with the installation and upgrade code.

== SMW 1.5.6 ==